--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Pythagorean Theorem: Live Calculator</title>
+    <meta name='description' content='Use this handy calculator to calculate the lengths of hypotenuses and legs of right triangles with ease!'>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width,initial-scale=1'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css'>
