--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <br />
         <p>
           built with <a href="http://vanilla-js.com/">vanilla.js</a> by <a href="https://github.com/nathanhleung">@nathanhleung</a>
+          <br>
+          <br>
+          <a href="https://github.com/nathanhleung/pythag-live">Github</a>
         </p>
         <br />
       </div>
