make files export IIFE result

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width,initial-scale=1'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css'>
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
@@ -55,8 +55,8 @@
     <script src="canvas.js"></script>
     <script>
       function update(e) {
-        calculate(e);
-        updateCanvas();
+        PYTHAG_CALC.calculate(e);
+        PYTHAG_CANVAS.updateCanvas();
       }
     </script>
   </body>
