add new screenshot

--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
           </div>
         </div>
         <div id="info">
-          <p>$a = tan^{-1}(\frac{A}{B}) = $ <span id='angle-a'>$0^{\circ}$</span></p>
-          <p>$b = tan^{-1}(\frac{B}{A}) = $ <span id='angle-b'>$0^{\circ}$</span></p>
-          <p>$c = 90^{\circ}$</p>
+          <p>
+            $a = tan^{-1}(\frac{A}{B}) = $ <span id='angle-a'>$0^{\circ}$</span>
+            &nbsp;|&nbsp;
+            $b = tan^{-1}(\frac{B}{A}) = $ <span id='angle-b'>$0^{\circ}$</span>
+            &nbsp;|&nbsp;
+            $c = 90^{\circ}$
+          </p>
         </div>
         <div id='canvas-container'>
           <canvas id='canvas' width='500' height='500'></canvas>
