fix merge stuff

--- a/index.html
+++ b/index.html
@@ -41,14 +41,10 @@
         </div>
         <br />
         <p>
-<<<<<<< HEAD
           built with <a href="http://vanilla-js.com/" tabindex="-1">vanilla.js</a> by <a href="https://github.com/nathanhleung" tabindex="-1">@nathanhleung</a>
-=======
-          built with <a href="http://vanilla-js.com/">vanilla.js</a> by <a href="https://github.com/nathanhleung">@nathanhleung</a>
           <br>
           <br>
-          <a href="https://github.com/nathanhleung/pythag-live">Github</a>
->>>>>>> e4126d5ebcdaf9003381484d7c6214e6d7a252a0
+          <a href="https://github.com/nathanhleung/pythag-live">View source</a>
         </p>
         <br />
       </div>
